# FoveatedRendererOpenGL

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindOpenCV.cmake
data/: EyeCoordinates.txt
models/: BigCity4.mtl  Cylineder.mtl  ISU_Camponile.mtl  Sphere.mtl  Sphere_t.mtl  teapot.mtl  teapot_t.mtl
models/ParkObj2/: park.mtl
scripts/: ImageGenerator.py  fr_test.py
src/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  DefaultModels.cpp  DefaultModels.h  Exists.cpp  Exists.h  EyeData.cpp  EyeData.h  EyeDataReader.cpp  EyeDataReader.h  EyeRenderHelpers.cpp  EyeRenderHelpers.h  FoveatedRendererBase.cpp  FoveatedRendererBase.h  FoveatedRenderingScene.cpp  FoveatedRenderingScene.h  TimeMeasurement.cpp  TimeMeasurement.h  Types.h  fr_lit_scene.fs  fr_lit_scene.vs  fr_lit_scene_ext.fs  fr_lit_scene_ext.vs  main.cpp  main_scene.cpp
